testsuite/tests/properties/invalid_memoized/test.out
test.py:18: error: This property cannot be memoized because argument a (of type Token.array) is not hashable
Done
